k8s/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-container
          image: ff-tm-back-config-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
  selector:
    matchLabels:
      app: backend-app
